We have a working training container for days to flowering and maturity estimation.

--- a/Images/assets/ubuntu/mongod.config
+++ b/Images/assets/ubuntu/mongod.config
@@ -4,7 +4,7 @@ systemLog:
   logAppend: false  # This ensures the log file is overwritten instead of appended
 
 storage:
-  dbPath: "/mnt/phenocart-work/prr000/MongoDBData/Data"
+  dbPath: "/mnt/IDEs/MongoDB/data"
 
 net:
   port: 27018
